--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-aliyun-oss",
   "description": "aliyun oss plugin for grunt",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "homepage": "https://github.com/pocketdigi/grunt-aliyun-oss",
   "author": {
     "name": "pocketdigi",
@@ -24,9 +24,6 @@
   "engines": {
     "node": ">= 0.8.0"
   },
-  "scripts": {
-    "test": "grunt test"
-  },
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "^0.5.0",
@@ -34,7 +31,7 @@
     "grunt-contrib-nodeunit": "^0.3.3"
   },
   "keywords": [
-    "gruntplugin"
+    "aliyun","oss","grunt"
   ],
   "dependencies": {
     "aliyun-sdk": "^1.9.14"
